--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>    
+    <title>Jutsu Kaizen Dojo</title>    
     <link rel="stylesheet" href="styles.css">
     <div class="navbar">
     <div class="nav-links">
@@ -130,4 +130,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
