--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>    
+    <title>Jutsu Kaizen Dojo</title>    
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="logo.png">
     <div class="navbar">
     <div class="nav-links">
         <a href="#about">About</a>
@@ -131,5 +130,6 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
 
