--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jutsu Kaizen Dojo</title>    
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="logo.png">
     <div class="navbar">
     <div class="nav-links">
         <a href="#about">About</a>
@@ -132,4 +133,5 @@
 </body>
 
 </html>
+
 
