--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="icon" type="image/x-icon" href="logo.png">
     <div class="navbar">
     <div class="nav-links">
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
+        <a href="about">About</a>
     </div>
 </div>
 
@@ -133,5 +132,6 @@
 </body>
 
 </html>
+
 
 
